fix: global vertical spacing for anchor link

--- a/packages/gatsby-theme-carbon/src/components/AnchorLinks/AnchorLinks.module.scss
+++ b/packages/gatsby-theme-carbon/src/components/AnchorLinks/AnchorLinks.module.scss
@@ -7,6 +7,11 @@
   }
 }
 
+h4 + *.list,
+.main > * + *.list {
+  --space: 32px; //overrides global vertical spacing
+}
+
 .list + * {
   margin-top: 80px;
 }
